# pico-station

./: .gitignore  CMakeLists.txt  README.md  common.h  main.c  pico_tool.sh
bme680/: bme680.h  bme680_defs.h
hmi/st7789/: fonts.h  st7789.c  st7789.h
iot/cellular/: CMakeLists.txt  pico_tool.sh  sim7020e.c  sim7020e.h
iot/pico_wireless/: CMakeLists.txt  pico_tool.sh  pico_wireless.c  pico_wireless.h
sensors/bme680/: CMakeLists.txt  bme680.c  bme680_defs.h
sensors/sgp30/: sgp30.c  sgp30.h
sensors/vl53l1x/: CMakeLists.txt  vl53l1x.c  vl53l1x.h
sgp30/: CMakeLists.txt  sgp30.h
sgp30/include/: sgp30.h
st7789/: CMakeLists.txt  st7789.h  st7789_other.c
st7789/include/: st7789.h
